[gd_scene load_steps=28 format=3 uid="uid://bl0l8sm6o42cd"]

[ext_resource type="PackedScene" uid="uid://dm3jxvrm5qvls" path="res://scenes/levels/level.tscn" id="1_wk3ol"]
[ext_resource type="PackedScene" uid="uid://bbwelpu3o6atv" path="res://scenes/structures/bed.tscn" id="2_k1cmf"]
[ext_resource type="Script" path="res://scenes/levels/first_level.gd" id="2_vstng"]
[ext_resource type="PackedScene" uid="uid://d3ljmpjseksc6" path="res://scenes/levels/second_level.tscn" id="3_2830v"]
[ext_resource type="PackedScene" uid="uid://do74d6fgat88l" path="res://scenes/structures/door.tscn" id="3_ph8jf"]
[ext_resource type="PackedScene" uid="uid://dsscgxgne6rde" path="res://scenes/lights/simple_light.tscn" id="4_ks81w"]
[ext_resource type="PackedScene" uid="uid://bdepptjbqpbne" path="res://scenes/interactables/interactable.tscn" id="5_kt0m2"]
[ext_resource type="AudioStream" uid="uid://caay7xpovdjm6" path="res://sounds/beep_low_pitch.mp3" id="6_ic0yk"]
[ext_resource type="Script" path="res://custom_resources/button_prompt_interactable.gd" id="6_s50l2"]
[ext_resource type="AudioStream" uid="uid://bddrse6dbdup7" path="res://sounds/emergency_alarm.mp3" id="7_4upeu"]
[ext_resource type="Script" path="res://custom_resources/effect.gd" id="7_cvys1"]
[ext_resource type="Script" path="res://custom_resources/arrow_interactable.gd" id="10_3q0hc"]
[ext_resource type="PackedScene" uid="uid://bqncdno4rb7be" path="res://scenes/lights/togglable_light.tscn" id="12_3afvv"]
[ext_resource type="PackedScene" uid="uid://ge6covusp0d7" path="res://scenes/structures/level_exit_door.tscn" id="13_beu11"]
[ext_resource type="PackedScene" uid="uid://5klrqrejhb0r" path="res://scenes/structures/level_exit_door_lock.tscn" id="14_uphqo"]
[ext_resource type="Script" path="res://custom_resources/button_mash_interactable.gd" id="15_vfm7w"]
[ext_resource type="PackedScene" uid="uid://c5xtvh8dmtuui" path="res://scenes/objects/paper_note.tscn" id="17_vdgv4"]

[sub_resource type="Resource" id="Resource_gocv0"]
script = ExtResource("6_s50l2")
messages = Array[String](["Facility security breached, engineer required in the testing facility.", "Terminate Lockdown?"])
type = 2
input_complete_sound = ExtResource("6_ic0yk")
input_complete_delay = 2.08165e-12
effect_description = ""

[sub_resource type="Resource" id="Resource_m7y2k"]
script = ExtResource("7_cvys1")
method_name = "stop_alarm"
is_repeatable = false

[sub_resource type="Resource" id="Resource_et5oh"]
script = ExtResource("10_3q0hc")
arrow_inputs = Array[int]([1, 2, 1, 3])
type = 0
input_complete_delay = 0.5
effect_description = ""

[sub_resource type="Resource" id="Resource_if3ws"]
script = ExtResource("7_cvys1")
method_name = "open"
is_repeatable = false

[sub_resource type="Resource" id="Resource_1obgc"]
script = ExtResource("10_3q0hc")
arrow_inputs = Array[int]([1, 2, 0, 3, 1])
type = 0
input_complete_delay = 0.5
effect_description = "Hallway Lights"

[sub_resource type="Resource" id="Resource_7puco"]
script = ExtResource("7_cvys1")
method_name = "turn_on"
is_repeatable = true

[sub_resource type="Resource" id="Resource_x2ve3"]
script = ExtResource("15_vfm7w")
starting_progress = 20.0
goal_progress = 100.0
increment_progress = 5.0
decrement_rate = 0.0
type = 1
input_complete_delay = 0.5
effect_description = "Unlock Facility Exit"

[sub_resource type="Resource" id="Resource_fe8rj"]
script = ExtResource("7_cvys1")
method_name = "unlock"
is_repeatable = false

[sub_resource type="Resource" id="Resource_d8evn"]
script = ExtResource("10_3q0hc")
arrow_inputs = Array[int]([0, 1, 2, 3, 1, 0])
type = 0
input_complete_delay = 0.5
effect_description = ""

[sub_resource type="Resource" id="Resource_50xmh"]
script = ExtResource("7_cvys1")
method_name = "unlock"
is_repeatable = true

[node name="FirstLevel" instance=ExtResource("1_wk3ol")]
script = ExtResource("2_vstng")
next_level = ExtResource("3_2830v")

[node name="TileMap" parent="." index="0"]
position = Vector2(-1.00134, -1)
layer_0/tile_data = PackedInt32Array(65543, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 262151, 65536, 1, 327687, 65536, 1, 327686, 65536, 1, 327685, 65536, 1, 327684, 65536, 1, 327683, 65536, 1, 327682, 65536, 1, 327681, 65536, 1, 327680, 65536, 1, 393215, 65536, 1, 327679, 65536, 1, 262143, 65536, 1, 196607, 65536, 1, 131071, 65536, 1, 262145, 65536, 1, 196609, 65536, 1, 131073, 65536, 1, 65537, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, 262147, 65536, 1, 196611, 65536, 1, 131075, 65536, 1, 65539, 65536, 1, 65540, 65536, 1, 131076, 65536, 1, 196612, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 196613, 65536, 1, 131077, 65536, 1, 65541, 65536, 1, 65542, 65536, 1, 131078, 65536, 1, 196614, 65536, 1, 262150, 65536, 1, 458751, 65536, 1, 393216, 65536, 1, 393217, 65536, 2, 393218, 65536, 2, 393219, 65536, 2, 393220, 65536, 2, 393221, 65536, 2, 393222, 65536, 2, 393223, 65536, 2, 327688, 131072, 1, 262152, 131072, 1, 196616, 131072, 1, 131080, 131072, 1, 65544, 131072, 1, 393224, 131072, 2, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 458752, 65536, 1, 524287, 65536, 1, 458750, 65536, 1, 524286, 65536, 1, 589822, 65536, 1, 589823, 65536, 1, 524288, 65536, 1, 393214, 65536, 1, 327678, 65536, 1, 262142, 65536, 1, 196606, 65536, 1, 131070, 65536, 1, 327677, 65536, 1, 393213, 0, 1, 262141, 65536, 1, 196605, 0, 1, 131069, 0, 1, 65534, 65536, 0, 65535, 65536, 0, 0, 65536, 0, 65533, 0, 0, 458749, 0, 2, 327676, 65536, 1, 262140, 65536, 1, 262139, 65536, 1, 327675, 65536, 1, 327674, 65536, 1, 262138, 65536, 1, 262137, 65536, 1, 327673, 65536, 1, 262136, 65536, 1, 327672, 65536, 1, 262135, 0, 0, 327671, 0, 2, 7, 65536, 0, 8, 131072, 0)
layer_1/name = "Inner Walls"
layer_1/tile_data = PackedInt32Array(393221, 327680, 8, 327685, 65536, 6, 262149, 65536, 6, 196613, 65536, 6, 131077, 131072, 7, 327681, 65536, 6, 262145, 65536, 6, 196609, 65536, 6, 393217, 327680, 8, 131074, 0, 6, 131076, 0, 6, 131073, 0, 7, 6, 327680, 6, 131078, 65536, 8)
layer_2/name = "Outer Walls"
layer_2/tile_data = PackedInt32Array(393219, 262144, 2, 393218, 262144, 2, 393217, 262144, 2, 393220, 262144, 2, 393221, 262144, 2, 393222, 262144, 2, 393223, 262144, 2, 393224, 327680, 2, 4, 262144, 0, 5, 262144, 0, 6, 262144, 0, 1, 262144, 0, 3, 262144, 0, 2, 262144, 0, 393216, 262144, 2, 0, 262144, 0, 65535, 262144, 0, 65534, 262144, 0, 65533, 196608, 0, 131069, 196608, 1, 196605, 327680, 1, 262141, 327680, 2, 458749, 196608, 2, 393213, 196608, 1, 327677, 327680, 1610612738, 262140, 262144, 2, 327676, 262144, 2, 327675, 262144, 2, 262139, 262144, 2, 262138, 262144, 2, 327674, 262144, 2, 262137, 262144, 2, 327673, 262144, 2, 262136, 262144, 2, 327672, 262144, 2, 262135, 196608, 0, 327671, 196608, 2, 7, 262144, 0, 8, 327680, 0, 65544, 327680, 1, 196616, 327680, 1, 131080, 327680, 1, 262152, 327680, 1, 327688, 327680, 1)

[node name="Player" parent="." index="1"]
position = Vector2(1948.6, 2287)
rotation = -1.58788

[node name="AmbientNoisePlayer" parent="." index="3"]
autoplay = false

[node name="DirectionalLight2D" parent="." index="4"]
visible = true
energy = 1.0

[node name="Bed" parent="." index="5" instance=ExtResource("2_k1cmf")]
position = Vector2(1633.18, 2223)
rotation = 1.57079
scale = Vector2(0.736768, 0.736768)

[node name="StartingRoomDoor" parent="." index="6" instance=ExtResource("3_ph8jf")]
position = Vector2(1363.82, 976)

[node name="AlarmInteractable" parent="." index="7" node_paths=PackedStringArray("targets") instance=ExtResource("5_kt0m2")]
position = Vector2(2072.77, 1734)
rotation = -4.71238
interactable_resource = SubResource("Resource_gocv0")
effect = SubResource("Resource_m7y2k")
targets = [NodePath("..")]

[node name="InteractLabel" parent="AlarmInteractable" index="4"]
offset_left = -181.0
offset_top = 24.0333
offset_right = -117.0
offset_bottom = 73.0333
rotation = 4.71238

[node name="AlarmSound" type="AudioStreamPlayer" parent="." index="8"]
stream = ExtResource("7_4upeu")
autoplay = true

[node name="DoorInteractable" parent="." index="9" node_paths=PackedStringArray("targets") instance=ExtResource("5_kt0m2")]
position = Vector2(1085.45, 1052)
interactable_resource = SubResource("Resource_et5oh")
effect = SubResource("Resource_if3ws")
targets = [NodePath("../StartingRoomDoor")]

[node name="InteractLabel" parent="DoorInteractable" index="4"]
offset_left = -144.192
offset_top = -34.0
offset_right = -80.1925
offset_bottom = 15.0

[node name="HallwayLightsInteractable" parent="." index="10" node_paths=PackedStringArray("targets") instance=ExtResource("5_kt0m2")]
position = Vector2(1381.85, 325)
interactable_resource = SubResource("Resource_1obgc")
effect = SubResource("Resource_7puco")
targets = [NodePath("../HallwayLights/TogglableHallwayLight"), NodePath("../HallwayLights/TogglableHallwayLight2"), NodePath("../HallwayLights/TogglableHallwayLight3"), NodePath("../HallwayLights/TogglableHallwayLight4")]

[node name="InteractLabel" parent="HallwayLightsInteractable" index="4"]
offset_left = -159.213
offset_top = -29.0
offset_right = -95.2128
offset_bottom = 20.0

[node name="SimpleLights" type="Node2D" parent="." index="11"]

[node name="SimpleLight" parent="SimpleLights" index="0" instance=ExtResource("4_ks81w")]
position = Vector2(604.808, 1911)
rotation = -1.57079

[node name="SimpleLight2" parent="SimpleLights" index="1" instance=ExtResource("4_ks81w")]
position = Vector2(2102.81, 1922)
rotation = 1.5708

[node name="SimpleLight3" parent="SimpleLights" index="2" instance=ExtResource("4_ks81w")]
position = Vector2(764.021, 995)

[node name="SimpleLight4" parent="SimpleLights" index="3" instance=ExtResource("4_ks81w")]
position = Vector2(2014.69, 995)

[node name="SimpleLight5" parent="SimpleLights" index="4" instance=ExtResource("4_ks81w")]
position = Vector2(2014.69, 995)

[node name="HallwayLights" type="Node2D" parent="." index="12"]

[node name="TogglableHallwayLight" parent="HallwayLights" index="0" instance=ExtResource("12_3afvv")]
position = Vector2(676.904, 631)
enabled = false

[node name="TogglableHallwayLight2" parent="HallwayLights" index="1" instance=ExtResource("12_3afvv")]
position = Vector2(1373.84, 631)
enabled = false

[node name="TogglableHallwayLight3" parent="HallwayLights" index="2" instance=ExtResource("12_3afvv")]
position = Vector2(2157.88, 631)
enabled = false

[node name="TogglableHallwayLight4" parent="HallwayLights" index="3" instance=ExtResource("12_3afvv")]
position = Vector2(2930.92, 631)
enabled = false

[node name="LevelExitDoor" parent="." index="13" instance=ExtResource("13_beu11")]
position = Vector2(-416.557, 2534)

[node name="LevelExitDoorLock" parent="LevelExitDoor" index="1" instance=ExtResource("14_uphqo")]
position = Vector2(-279.373, -84)

[node name="LevelExitDoorLock2" parent="LevelExitDoor" index="2" instance=ExtResource("14_uphqo")]
position = Vector2(198.265, -84)

[node name="RightExitDoorLockInteractable" parent="." index="14" node_paths=PackedStringArray("targets") instance=ExtResource("5_kt0m2")]
position = Vector2(150.201, 2407)
interactable_resource = SubResource("Resource_x2ve3")
effect = SubResource("Resource_fe8rj")
targets = [NodePath("../LevelExitDoor/LevelExitDoorLock2")]

[node name="Interactable" parent="." index="15" node_paths=PackedStringArray("targets") instance=ExtResource("5_kt0m2")]
position = Vector2(-3166.23, 1566)
interactable_resource = SubResource("Resource_d8evn")
effect = SubResource("Resource_50xmh")
targets = [NodePath("../LevelExitDoor/LevelExitDoorLock")]

[node name="InteractLabel" parent="Interactable" index="4"]
offset_left = 140.187
offset_top = -116.0
offset_right = 204.187
offset_bottom = -67.0

[node name="Door" parent="." index="16" instance=ExtResource("3_ph8jf")]
position = Vector2(2533.38, 587)
rotation = 1.57079

[node name="PaperNoteStartingRoom" parent="." index="17" instance=ExtResource("17_vdgv4")]
position = Vector2(1467.96, 1632)
rotation = 0.542683
paper_message = "New policy requires we install locks in all of the personal quarters,
don't forget you'll need to sign in at the terminal from now on."

[node name="PaperNoteByLightTerminal" parent="." index="18" instance=ExtResource("17_vdgv4")]
position = Vector2(914.221, 494)
rotation = 0.491597
paper_message = "Lights have been on the fritz for the past week.
Need to manually boot them at the nearest terminal, sometimes multiple times.
These dark hallways gives me the creeps"

[node name="PaperNoteByHallway" parent="." index="19" instance=ExtResource("17_vdgv4")]
position = Vector2(-70.0937, 1399)
rotation = -0.151914
paper_message = "The higher ups started adding multi module locks to the doors after a power surge, end up spending the first half of our shift unlocking the whole place"

[editable path="AlarmInteractable"]
[editable path="DoorInteractable"]
[editable path="HallwayLightsInteractable"]
[editable path="Interactable"]
